<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Analyser</string>

    <string-array name="main_items">
        <item>免疫检测</item>
    </string-array>

    <!--View character-->
    <string name="text_capture">Capture</string>
    <string name="text_switch">Switch</string>
    <string name="text_close">关闭</string>
    <string name="text_confirm">确认</string>
    <string name="text_debug">显示测试结果！</string>
    <string name="text_save">保存</string>
    <string name="text_name_label">name:</string>
    <string name="text_value_label">label:</string>
    <string name="text_date_label">time:</string>

    <string name="hour_minute_second"><xliff:g id="hour">%1$d</xliff:g>时<xliff:g id="minute">%2$d</xliff:g>分<xliff:g id="minute">%3$d</xliff:g>秒</string>
    <string name="minute_second"><xliff:g id="minute">%1$d</xliff:g>分<xliff:g id="minute">%2$d</xliff:g>秒</string>
    <string name="second"><xliff:g id="minute">%1$d</xliff:g>秒</string>

    <string name="label_name">姓名</string>
    <string name="label_sex">性别:</string>
    <string name="label_age">年龄:</string>
    <string name="label_birthday">出生年月:</string>
    <string name="label_choose_birthday">请选择出生年月</string>
    <string name="label_complete">完成</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="date">时间:</string>
    <string name="text_Con">Con:</string>
    <string name="text_Tnl">Tnl:</string>
    <string name="text_CK_MB">CK-MB:</string>
    <string name="text_Myo">Myo:</string>
    <string name="test_item">测试项:</string>
    <string name="gray_value">灰度值:</string>
    <string name="gray_percentage">比重:</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_android">Android</string>

</resources>
