<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbffffff"
    android:divider="@drawable/ic_divider"
    android:orientation="vertical"
    android:showDividers="middle">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_close"
        style="@style/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/ic_solid_rect_round_bg"
        android:padding="5dp"
        android:text="@string/text_close"
        android:textColor="#ffffff" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_result"
        style="@style/TextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="24dp"
        android:layout_weight="3"
        android:lineSpacingExtra="2dp"
        android:scrollbars="vertical"
        android:text="@string/text_debug" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="64dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_solid_rect_round_bg"
        android:text="@string/text_confirm"
        android:textColor="#ffffff" />

</LinearLayout>